# tensorflow-demo

./: .gitignore  README.md  pyproject.toml
src/: containers.py
src/entrypoints/: __init__.py  __main__.py
src/services/: __init__.py  chapter2_example_service.py  chapter3_example_service.py  configuration_service.py  configuration_service_test.py  linear_equation_service.py
src/util/: logger.py
